# poc-kafka-out-k8s

./: README.md
consumer/: Dockerfile  consumer.py  pyproject.toml  requirements.txt
consumer/infra/: consumer-deployment.yaml
kafka/: docker-compose.yml
producer/: Dockerfile  producer.py  pyproject.toml
producer/infra/: producer-deployment.yaml
