[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["nawawishkid <nawawishkid.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kafka = "^1.3.5"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
